--- a/Weatherman/Weatherman.csproj
+++ b/Weatherman/Weatherman.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Gui.cs" />
     <Compile Include="LvbFile.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeFlowType.cs" />
     <Compile Include="Weatherman.cs" />
     <Compile Include="WeathermanWeather.cs" />
