--- a/Weatherman/Weatherman.csproj
+++ b/Weatherman/Weatherman.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
+    <Compile Include="FFXIVWeatherLuminaService.cs" />
     <Compile Include="Gui.cs" />
+    <Compile Include="IFFXIVWeatherLuminaService.cs" />
     <Compile Include="LvbFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeFlowType.cs" />
