--- a/Weatherman/packages.config
+++ b/Weatherman/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DalamudPackager" version="1.2.2" targetFramework="net472" />
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
 </packages>
