--- a/Weatherman/Weatherman.csproj
+++ b/Weatherman/Weatherman.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Authors>NightmareXIV</Authors>
-		<Version>2.4.0.8</Version>
+		<Version>2.4.0.9</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -36,30 +36,65 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DalamudPackager" Version="2.1.10" />
-		<Reference Include="Newtonsoft.Json">
-			<HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
-		<Reference Include="Dalamud">
-			<HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
-		<Reference Include="ImGui.NET">
-			<HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
-		<Reference Include="Lumina">
-			<HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
-		<Reference Include="Lumina.Excel">
-			<HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
+      <Reference Include="Newtonsoft.Json">
+          <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Dalamud">
+          <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Dalamud.Common">
+          <HintPath>$(DalamudLibPath)Dalamud.Common.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="ImGui.NET">
+          <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="ImGuiScene">
+          <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Lumina">
+          <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Lumina.Excel">
+          <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="FFXIVClientStructs">
+          <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="PInvoke.User32">
+          <HintPath>$(DalamudLibPath)PInvoke.User32.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="PInvoke.Windows.Core">
+          <HintPath>$(DalamudLibPath)PInvoke.Windows.Core.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="SharpDX.Mathematics">
+          <HintPath>$(DalamudLibPath)SharpDX.Mathematics.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Reloaded.Hooks.Definitions">
+          <HintPath>$(DalamudLibPath)Reloaded.Hooks.Definitions.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Serilog">
+          <HintPath>$(DalamudLibPath)Serilog.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="res\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\ECommons\ECommons\ECommons.csproj" />
 	</ItemGroup>
 </Project>
