--- a/Weatherman/Weatherman.csproj
+++ b/Weatherman/Weatherman.csproj
@@ -100,6 +100,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\ECommons\ECommons\ECommons.csproj" />
+	  <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
 	</ItemGroup>
 </Project>
