--- a/Weatherman/Weatherman.csproj
+++ b/Weatherman/Weatherman.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Authors>NightmareXIV</Authors>
-		<Version>2.4.1.0</Version>
+		<Version>2.4.1.1</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -86,10 +86,22 @@
           <HintPath>$(DalamudLibPath)Serilog.dll</HintPath>
           <Private>False</Private>
       </Reference>
+      <Reference Include="PInvoke.User32">
+          <HintPath>$(DalamudLibPath)PInvoke.User32.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="PInvoke.Windows.Core">
+          <HintPath>$(DalamudLibPath)PInvoke.Windows.Core.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="PInvoke.Kernel32">
+          <HintPath>$(DalamudLibPath)PInvoke.Kernel32.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="DalamudPackager" Version="2.1.13" />
+	  <PackageReference Include="DalamudPackager" Version="11.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
