--- a/Weatherman/Weatherman.csproj
+++ b/Weatherman/Weatherman.csproj
@@ -102,9 +102,6 @@
 
 	<ItemGroup>
 	  <PackageReference Include="DalamudPackager" Version="12.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
+	  <PackageReference Include="ECommons" Version="3.0.1.3" />
 	</ItemGroup>
 </Project>
